--- a/cliente/src/components/auth/Register/Register.css
+++ b/cliente/src/components/auth/Register/Register.css
@@ -1,4 +1,4 @@
-/* Login.css */
+/* Register.css */
 .register-form {
   max-width: 400px;
   margin: 10px auto;
@@ -6,6 +6,7 @@
   border: 1px solid #ddd;
   border-radius: 8px;
   background-color: #646464;
+  box-shadow: 10px 10px 8px rgba(0, 0, 0, 0.7);
 }
 
 .register-form input {
@@ -29,4 +30,15 @@
 
 .register-form button:hover {
   background-color: #0056b3;
+}
+
+@media (max-width: 768px) {
+  .register-form {
+    max-width: 300px;
+    margin: 10px auto;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background-color: #646464;
+  }
 }
