--- a/cliente/src/components/Modal/Modal.css
+++ b/cliente/src/components/Modal/Modal.css
@@ -14,5 +14,12 @@
   background-color: #646464;
   padding: 20px;
   border-radius: 5px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 10px 10px 8px rgba(0, 0, 0, 0.7);
+}
+
+@media (max-width: 768px) {
+  .modal-content {
+    max-width: 300px;
+    max-height: 50%;
+  }
 }
