--- a/cliente/src/components/auth/Login/Login.css
+++ b/cliente/src/components/auth/Login/Login.css
@@ -6,6 +6,7 @@
   border: 1px solid #ddd;
   border-radius: 8px;
   background-color: #646464;
+  box-shadow: 10px 10px 8px rgba(0, 0, 0, 0.7);
 }
 
 .login-form input {
@@ -29,4 +30,15 @@
 
 .login-form button:hover {
   background-color: #0056b3;
+}
+
+@media (max-width: 768px) {
+  .login-form {
+    max-width: 300px;
+    margin: 50px auto;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background-color: #646464;
+  }
 }
