--- a/cliente/src/components/exercise/ExerciseList/ExerciseList.css
+++ b/cliente/src/components/exercise/ExerciseList/ExerciseList.css
@@ -1,13 +1,3 @@
-/* .exercise-list-container {
-  margin: 2rem;
-  display: grid;
-  grid-template-rows: repeat(auto-fill, 300px);
-  grid-template-columns: repeat(auto-fill, 300px);
-  grid-gap: 5rem;
-  grid-auto-flow: row;
-  align-items: stretch;
-} */
-
 .exercise-list-container {
   display: flex;
   flex-wrap: wrap;
@@ -20,4 +10,11 @@
   margin: 1rem;
   align-items: center;
   justify-content: center;
+}
+
+@media (max-width: 768px) {
+  button.btn-new {
+    font-weight: 200;
+    font-size: 13px;
+  }
 }
