--- a/cliente/src/components/user/EditProfile/EditProfile.css
+++ b/cliente/src/components/user/EditProfile/EditProfile.css
@@ -5,6 +5,7 @@
   border: 1px solid #ddd;
   border-radius: 8px;
   background-color: #f9f9f9;
+  box-shadow: 10px 10px 8px rgba(0, 0, 0, 0.7);
 }
 
 .edit-profile-container h1 {
@@ -25,6 +26,7 @@
 }
 
 .edit-profile-button-cancel {
+  margin: 0 auto;
   display: block;
   width: 40%;
   padding: 10px;
@@ -40,7 +42,24 @@
   background-color: #c82333;
 }
 
+.edit-profile-button .edit-profile-button-cancel {
+  max-height: 1px;
+}
 .center {
   display: flex;
   justify-content: space-around;
+}
+
+@media (max-width: 768px) {
+  .edit-profile-container {
+    max-width: 300px;
+    margin: 20px auto;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+  }
+  .edit-profile-container h1 {
+    font-size: 2rem;
+  }
 }
